<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hak-yo</string>
    <string name="hello_world">Hello world!</string>
    <string name="zero">0</string>
    <string name="anyone">Anyone..?</string>

    <!-- Misc -->
    <string name="from">From</string>
    <string name="to">To</string>

    <!-- Preference -->
    <string name="pref_scan">Scan</string>
    <string name="pref_advertise">Advertise</string>
    <string name="pref_do_not_disturb_from_hour">DoNotDisturbFromHour</string>
    <string name="pref_do_not_disturb_from_minute">DoNotDisturbFromMinute</string>
    <string name="pref_do_not_disturb_to_hour">DoNotDisturbToHour</string>
    <string name="pref_do_not_disturb_to_minute">DoNotDisturbToMinute</string>
    <string name="pref_use_do_not_disturb">UseDoNotDisturb</string>
    <string name="pref_do_not_disturb">DoNotDisturb</string>
    <string name="pref_do_not_disturb_title">Do Not Disturb</string>
    <string name="pref_use_do_not_disturb_title">Enable Do Not Disturb</string>
    <string name="pref_use_do_not_disturb_disabled">Disabled</string>
    <string name="pref_first_main_run">FirstMainRun</string>
    <string name="pref_myinfo">My ID</string>
    <string name="pref_deleteall">Reset</string>
    <string name="pref_deleteall_title">Reset</string>
    <string name="pref_deleteall_content">Clears friends database</string>
    <string name="pref_dev_team">Contact</string>

    <!-- Splash -->
    <string name="splash_logo_description">Splash</string>
    <string name="splash_title">Hak-Yo</string>
    
    <!-- Action Bar Menu -->
    <string name="action_add_friend">action_add_friend</string>
    <string name="action_setting">setting</string>

</resources>